fix: Overflowing items on venue cards
Bypass overflowing items problem by setting min-height on locations-list

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -52,9 +52,14 @@ html, body {
 
 /* Cards Section */
 
+#locations-list {
+  min-height: 110px;
+}
+
 .mdl-venue-card {
   flex-direction: column;
   flex-wrap: nowrap;
+  width: 180px;
 }
 
 .mdl-venue-card .mdl-venue-card__title {
